--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>stick adventure</title>
-    <!-- <script src="lib/Vector/Vector2.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
     <script>
     document.onload = function(){
       //  window.
